@@ -21,13 +21,13 @@ EBUILD lsof-4.82.ebuild 2381 RMD160 3cd5695753ea56c2664654728a466ed6ff1661f8 SHA
 EBUILD lsof-4.83.ebuild 2287 RMD160 02e9100a6330ff64e3b137b068a05e33f2192575 SHA1 a242ef6f280618b63c27e91790fa77a10ed9d46c SHA256 2a24a3028d1bb7f058e5287619fe041fa1e753e7de17a9cabd6577d2046048ec
 EBUILD lsof-4.84-r1.ebuild 2741 RMD160 55dfc4b7970bb9509741c75bcf276e8f116d9fd2 SHA1 2fd1250340fbc67ecf117fab6508b857549420e7 SHA256 a050241be5df5d6b49cd89c4ecf25232a23bdf2a9817edde80642401025fe2d0
 EBUILD lsof-4.84.ebuild 2297 RMD160 727d045d5214f74d3e7d719dec082dcf06fc5bd7 SHA1 0d65a6e19ac49adbba4a2e1f1e968b2e13c355b4 SHA256 c528ce6d7a10aab3f132a5bd8f57a13f0a54db922ef5051ca9f5286a11cbb67c
-EBUILD lsof-4.85-r2.ebuild 2777 RMD160 2ae355a98f72d7944a0cdada9d36c3a23a8d73f7 SHA1 a94735831148b18d7dfcb1dc451c013bb7f0ac1b SHA256 a52faa5ae609d58845e8f1cb7a2133a9234b0ca7aaf4bd88ac57b7d3223c156e
-MISC ChangeLog 14901 RMD160 6aeb63e84aac04b34de41201aeaa1a04e89fb1ed SHA1 dd4ca34882a2999f42f07de425353910d1759d65 SHA256 6e0741b721b88343f907dc4ca3ab37e0e9e9aefe1279b794c10eca05c2e52c9a
+EBUILD lsof-4.85-r2.ebuild 2846 RMD160 0c7ec1c5d5eb2bfbd61d9a3e291cd3eb08d5f9c8 SHA1 55872513b0a218e56c8995bc7b6ccb7170ca4832 SHA256 d2d1db6eeed8a9f69037078c689fdfb6d83b13f9196bec060830ae2d5cfc80ad
+MISC ChangeLog 15019 RMD160 775bf3b6e1e4a41296be457b6b3b65981205820e SHA1 a69fce1c775af47be2cd9ec8fcfe87af6c82372e SHA256 331bfdf160ec43f113dfb31415c73fd5196e7f1a04e7ba2453e1f4a8338a9193
 MISC metadata.xml 238 RMD160 c0918b440085b691a6da31dba31384758ae4d214 SHA1 2cae35a26364573c7399f53668fb73dd6923b09f SHA256 27f27d7c7ba9fb670a6867a79ff8af354e48735f9bd672d387d96b4bd49d415b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/LNk8ACgkQX3X2B8XHTokWSQCfXzd8H6k4BQreiwa+DcEq5XXo
-YuAAnjg1/6Pqlf6/wGXExyRrWA0oP/aI
-=0HmC
+iEUEARECAAYFAk/bIZgACgkQX3X2B8XHTok6iQCcC7OmS3J9cuySTQO9mtD+GUmP
+Q20AlidD6UgrBlKzD/g8wCrx2aFZrMc=
+=vK+u
 -----END PGP SIGNATURE-----
